@@ -20,6 +20,7 @@ XXXX/XX/XX
   - #4547, Fix AddRasterConstraints handling of empty tables (Sandro Santilli)
   - #4549, Fix schema qualification of internal types (Raúl Marín)
   - #4546, Fix PLPGSQL functions missing the schema qualification (Raúl Marín)
+  - #4588, Fix update when st_union(geometry) doesn't exist (Raúl Marín)
 
 
 PostGIS 2.4.8
